# mixed_reality_huangwei

MixedReality/: README.txt  local.properties  settings.gradle
MixedReality/app/: build.gradle
MixedReality/app/src/androidTest/java/com/qualcomm/qti/xr/mixedreality/: ExampleInstrumentedTest.java
MixedReality/app/src/main/: AndroidManifest.xml
MixedReality/app/src/main/assets/raw/: model_f.glsl  model_g.glsl  model_v.glsl  star_f.glsl  star_g.glsl  star_v.glsl
MixedReality/app/src/main/cpp/: CMakeLists.txt  main.cpp
MixedReality/app/src/main/java/com/qualcomm/qti/xr/mixedreality/: VrNativeActivity.java
MixedReality/app/src/main/res/drawable/: ic_launcher_foreground.xml
MixedReality/app/src/main/res/values/: ic_launcher_background.xml
MixedReality/app/src/test/java/com/qualcomm/qti/xr/java/: ExampleUnitTest.java
MixedReality/gradle/wrapper/: gradle-wrapper.properties
